[gd_scene load_steps=6 format=3 uid="uid://by2f8d5y3ad05"]

[ext_resource type="Script" path="res://entities/Projectile.gd" id="1_y5x5p"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7x5gk"]
albedo_color = Color(0.603922, 0.501961, 0, 1)
metallic = 1.0
metallic_specular = 1.0
roughness = 0.0
emission_enabled = true
emission = Color(0.560784, 0.352941, 0.145098, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_oamci"]
material = SubResource("StandardMaterial3D_7x5gk")
top_radius = 0.01
bottom_radius = 0.03
height = 0.14

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(0.301632, 0.110224, 0.117487)

[sub_resource type="SphereShape3D" id="SphereShape3D_l0eoe"]

[node name="Projectile" type="CharacterBody3D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1_y5x5p")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-8.74228e-08, 2, 0, -2, -8.74228e-08, 0, 0, 0, 2, 0, 0, 0)
mesh = SubResource("CylinderMesh_oamci")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("3")

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="Sphere" type="Area3D" parent="."]

[node name="SphereShapeHolder" type="CollisionShape3D" parent="Sphere"]
shape = SubResource("SphereShape3D_l0eoe")

[connection signal="body_entered" from="Area3D" to="." method="_on_Projectile_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
